fix(css): darken dark mode skeleton color (#1379)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,7 +110,7 @@
     --background: 240 3.7% 15.88%;
     --foreground: 210 20% 98%;
 
-    --skeleton: 240 5% 65%;
+    --skeleton: 240 5% 40%;
 
     --card: 240 5.26% 26.08%;
     --card-secondary: 240 5% 22%;
